# cookiecutter-cpp-project

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  COPYING.md  LICENSE.md  README.md  cookiecutter.json  local_extensions.py  pytest.ini  requirements-dev.txt  setup.py  tox.ini
.github/: cpp-project-template.yml
.github/workflows/: ci.yml  pypi.yml  sync-template.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: __init__.py  test_bake_project.py  test_deploy_bake.py  test_pypi_release.py
{{cookiecutter.project_slug}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  codecov.yml  conanfile.txt  pyproject.toml  requirements-dev.txt  setup.py  sonar-project.properties  vcpkg.json  {{cookiecutter.project_slug}}Config.cmake.in
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  pypi.yml  sonarcloud.yml
{{cookiecutter.project_slug}}/app/: CMakeLists.txt  {{cookiecutter.project_slug}}_app.cpp
{{cookiecutter.project_slug}}/cmake/: ConanSetup.cmake  {{cookiecutter.project_slug}}Config.cmake.in
{{cookiecutter.project_slug}}/doc/: CMakeLists.txt  conf.py  index.rst  requirements-rtd.txt
{{cookiecutter.project_slug}}/include/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.hpp
{{cookiecutter.project_slug}}/python/: CMakeLists.txt  {{cookiecutter.project_slug}}_python.cpp
{{cookiecutter.project_slug}}/python/tests/: test_python_bindings.py
{{cookiecutter.project_slug}}/python/{{cookiecutter.__python_module}}/: __init__.py  _{{cookiecutter.project_slug}}.cpp
{{cookiecutter.project_slug}}/python/{{cookiecutter.project_slug.replace('-','')}}/: __init__.py  _{{cookiecutter.project_slug}}.cpp
{{cookiecutter.project_slug}}/src/: CMakeLists.txt  {{cookiecutter.project_slug}}.cpp
{{cookiecutter.project_slug}}/tests/: CMakeLists.txt  {{cookiecutter.project_slug}}_t.cpp
{{cookiecutter.project_slug}}/tests/python/: test_python_bindings.py
