# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "scikit-build-core",
    {%- if cookiecutter.python_bindings == "pybind11" %}
    "pybind11[global]"
    {%- elif cookiecutter.python_bindings == "nanobind" %}
    "nanobind[global]"
    {%- endif %}
]
build-backend = "scikit_build_core.build"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for {{ cookiecutter|modname }}'s version
[project]
name = "{{ cookiecutter|modname }}"
version = "0.0.1"
description = "Add short description here"
readme = "README.md"
maintainers = [
    { name = "{{ cookiecutter.full_name}}", email = "your@email.com" },
]
requires-python = ">=3.10"
{%- if cookiecutter.license != "None" %}
license-files = ["LICEN[CS]E*"]
{%- if cookiecutter.license == "MIT" %}
license = "MIT"
{%- elif cookiecutter.license == "BSD-2" %}
license = "BSD-2-Clause"
{%- elif cookiecutter.license == "GPL-3.0" %}
license = "GPL-3.0-only"
{%- elif cookiecutter.license == "LGPL-3.0" %}
license = "LGPL-3.0-only"
{%- endif %}
{%- endif %}

classifiers = [
    "Programming Language :: Python :: C++",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

# The configuration for the scikit-build-core build process
[tool.scikit-build]
cmake.version = ">=3.23"
build.verbose = true

[tool.scikit-build.cmake.define]
{{ cookiecutter.project_slug }}_BUILD_PYTHON = "ON"
{{ cookiecutter.project_slug }}_BUILD_TESTING = "OFF"
{{ cookiecutter.project_slug }}_BUILD_DOCS = "OFF"

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = ["tests/python"]

{% if cookiecutter.pypi_release == "Yes" -%}
# The next section configures building wheels in Continuous Integration
# The cibuildwheel documentation covers the available options in detail:
# https://cibuildwheel.readthedocs.io/en/stable/options/
[tool.cibuildwheel]
# The variables in this section allow you to customize the process how the wheels
# for the Python packages are built. For a list of options, see this
# page: https://cibuildwheel.readthedocs.io/en/stable/options/

# Verbose output is helpful for understanding CI failures
build-verbosity = 3

# We restrict ourselves to recent Python versions
skip = "pp* *p27-* cp35-* cp36-* cp37-* cp38-* cp39-* *musllinux*"

# Testing commands for our wheels
test-command = "pytest {package}/tests/python"
test-requires = ["pytest"]
{%- endif %}